# pai-showcase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/sample_corpus/: epictetus_enchiridion.md  marcus_aurelius_meditations.md  seneca_letters.md
docs/: architecture.md
tests/: __init__.py  test_rag.py
tools/: pai
tools/core/: database.py  rag.py
