[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pai-showcase"
version = "0.1.0"
description = "Deterministic RAG retrieval and grounding showcase using SQLite FTS5."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]
include = ["core*"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["tools", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
